# flowcept

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/workflows/: create-release-n-publish.yml  run-tests-simple.yml  ui-checks.yml
docs/: README.md  agent.rst  blob_data.rst  blob_schema.rst  blob_versioned_single_layer_perceptron_example.rst  default_user_guide.rst  index.rst  prov_query.rst  reporting.rst  rest_api.rst  schemas.rst  setup.rst  task_schema.rst  web_ui.rst  workflow_schema.rst
docs/openapi/: flowcept-openapi.json  flowcept-openapi.yaml
examples/: start_here.py
examples/llm_complex/: README.md  llm_dataprep.py  llm_main_example.py
examples/llm_tutorial/: llm_dataprep.py  text_vocab.py
examples/olcf_frontier/: README.md  login_node_workflow.py  workflow.py
notebooks/: mlflow.ipynb  tensorboard.ipynb
resources/: sample_settings.yaml
src/flowcept/: README.md  __init__.py  cli.py  configs.py  version.py
src/flowcept/agents/: README.md  __init__.py  agents_utils.py  flowcept_agent.py  flowcept_ctx_manager.py
src/flowcept/agents/prompts/: chat_prompts.py  in_memory_query_prompts.py  workflow_query_prompts.py
src/flowcept/agents/tools/: db_prov_tools.py  general_tools.py  prov_tools.py  workflow_query_tools.py
src/flowcept/commons/: README.md  sanitization.py  vocabulary.py
src/flowcept/commons/daos/docdb_dao/: docdb_dao_base.py  lmdb_dao.py  (+1 more)
src/flowcept/commons/flowcept_dataclasses/: agent_object.py  blob_object.py  workflow_object.py
src/flowcept/flowcept_api/: README.md  db_api.py  flowcept_controller.py
src/flowcept/flowceptor/: README.md
src/flowcept/flowceptor/adapters/: base_interceptor.py
src/flowcept/flowceptor/consumers/: document_inserter.py
src/flowcept/instrumentation/: README.md  flowcept_task.py
src/flowcept/report/: README.md  aggregations.py  loaders.py  service.py
src/flowcept/report/renderers/: campaign_workflow_card_markdown.py  provenance_report_pdf.py  workflow_card_markdown.py
src/flowcept/webservice/: README.md  main.py
src/flowcept/webservice/docs/: API_CONTRACT.md
src/flowcept/webservice/routers/: agents.py  campaigns.py  chat.py  dashboards.py  datasets.py  health.py  models.py  objects.py  query.py  stats.py  stream.py  workflows.py
src/flowcept/webservice/schemas/: dashboards.py
src/flowcept/webservice/services/: chat_service.py  dashboard_store.py  dataflow.py  reports.py  sorting.py  stats.py  streaming.py
tests/: README.md  conftest.py
tests/agent/: agent_tests.py
tests/api/: db_api_test.py
tests/doc_db_inserter/: doc_db_inserter_test.py
tests/instrumentation_tests/ml_tests/: single_layer_perceptron_test.py
tests/report/: report_service_test.py
tests/webservice/: test_webservice_api.py  test_webservice_integration.py
ui/: README.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
ui/public/: default_dashboard_configs.json
ui/src/: index.css  main.tsx  routeTree.gen.ts
ui/src/api/: client.ts  queries.ts  sse.ts  types.ts
ui/src/components/: DeleteConfirmModal.tsx  JsonTree.tsx
ui/src/components/charts/: CoarseDataflowView.tsx  DagView.tsx  DataflowView.tsx  EChart.tsx  GanttChart.tsx  StatusStrip.tsx  TelemetryChart.tsx  graphStyles.ts
ui/src/components/chat/: ChatPanel.tsx
ui/src/components/dashboard/: ChartRenderer.tsx  spec.ts  specToOption.ts
ui/src/components/markdown/: Markdown.tsx
ui/src/components/tables/: DataTable.tsx
ui/src/components/tasks/: ActivityDrawer.tsx  TaskDrawer.tsx
ui/src/lib/: coarsenGraph.ts  format.ts  lineage.ts
ui/src/routes/: __root.tsx  agents.$agentId.tsx  agents.index.tsx  campaigns.$campaignId.tsx  campaigns.index.tsx  dashboards.index.tsx  index.tsx  objects.$objectId.tsx  objects.index.tsx  tasks.$taskId.tsx  workflows.$workflowId.tsx  workflows.index.tsx
ui/src/stores/: chatStore.ts  highlightStore.ts  inspectorStore.ts
ui/tests/: coarsenGraph.test.ts  format.test.ts  highlightStore.test.ts  inspectorStore.test.ts  lineage.test.ts
ui/tests/e2e/: agent-telemetry-live.spec.ts  agents.spec.ts  graph-zoom.spec.ts  highlight-live.spec.ts  highlight.spec.ts
(+7 files in other folders)
