[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flowcept"
dynamic = ["version"]
requires-python = ">=3.11"

authors = [{name = "Oak Ridge National Laboratory"}]
description = "Capture and query workflow provenance data using data observability"
readme = "README.md"
license = "MIT"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3"
]
keywords = [
    "ai",
    "ml",
    "machine-learning",
    "provenance",
    "lineage",
    "responsible-ai",
    "databases",
    "big-data",
    "provenance",
    "tensorboard",
    "data-integration",
    "scientific-workflows",
    "dask",
    "reproducibility",
    "workflows",
    "parallel-processing",
    "lineage",
    "model-management",
    "mlflow",
    "responsible-ai",
    "data-analytics",
    "agentic-ai",
    "agentic-workflows",
    "llm",
]

dependencies = [
    "omegaconf",
    "numpy",
    "msgpack",
    "orjson"
]

[project.optional-dependencies]
redis = ["redis"]
lmdb = ["lmdb"]
telemetry = ["psutil>=6.1.1", "py-cpuinfo"]
academy = ["flowcept[redis]", "academy-py"]
extras = ["flowcept[redis]", "flowcept[telemetry]", "flowcept[mongo]", "GitPython", "pandas", "pyarrow", "requests", "rich"]
webservice = ["fastapi", "uvicorn", "pyyaml"]
legacy_webservice = ["flask-restful"]

analytics = ["seaborn", "plotly", "scipy", "matplotlib"]
report_pdf = ["matplotlib", "reportlab", "networkx"]
mongo = ["pymongo", "pyarrow"]
dask = ["tomli", "dask[distributed]<=2024.10.0"]
docs = ["sphinx", "furo"]
kafka = ["confluent-kafka<=2.8.0"]  # As of today, 2/28/2025, version 2.8.1 is stale. When this gets fixed, let's remove the version constraint. https://pypi.org/project/confluent-kafka/#history
mlflow = ["mlflow-skinny", "SQLAlchemy", "alembic", "watchdog", "cryptography"]
nvidia = ["nvidia-ml-py"]
amd = ["amdsmi"]
mqtt = ["paho-mqtt"]
tensorboard = ["tensorboard", "tensorflow", "tbparse"]
llm_agent = ["mcp[cli]", "langchain_community", "langchain_openai", "streamlit", "PyMuPDF", "matplotlib", "tabulate"]
llm_google = ["flowcept[llm_agent]", "google-genai"]
llm_agent_audio = ["flowcept[llm_agent]", "streamlit-mic-recorder", "SpeechRecognition", "pydub", "gTTS"]
# System dependency (required for pydub)
# Install ffmpeg on the system (not a pip package):
# macOS (Homebrew): brew install ffmpeg
# Conda (any OS): conda install -c conda-forge ffmpeg
# Debian/Ubuntu: sudo apt-get install ffmpeg

dev = [
    "flowcept[docs]",
    "jupyterlab",
    "nbmake",
    "pika",
    "pytest",
    "pytest-timeout",
    "ruff",
    "pyyaml"
]
# Torch and some other ml-specific libs, only used for dev purposes, require the following specific versions.
ml_dev = [
    "torch==2.2.2",
    "torchvision==0.17.2",
    "torchtext==0.17.2",
    "datasets==2.17.0",
    "numpy<2.0",
    "sacremoses",
    "nltk"
]
all = [
    "flowcept[telemetry]",
    "flowcept[extras]",
    "flowcept[webservice]",
    "flowcept[redis]",
    "flowcept[lmdb]",
    "flowcept[mongo]",
    "flowcept[analytics]",
    "flowcept[dask]",
    "flowcept[kafka]",
    "flowcept[mlflow]",
    "flowcept[mqtt]",
    "flowcept[tensorboard]",
    "flowcept[report_pdf]",
    "flowcept[dev]",
    "flowcept[llm_agent]",
    "flowcept[llm_google]"
]

[tool.hatch.version]
path = "src/flowcept/version.py"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = ["E501", "D"]
ignore = ["D200", "D212", "D105", "D401", "D205", "D100"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.hatch.build.targets.wheel]
packages = ["src/flowcept"]

[tool.hatch.build.targets.wheel.force-include]
"resources/sample_settings.yaml" = "resources/sample_settings.yaml"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:websockets\\.legacy is deprecated:DeprecationWarning",
    "ignore:websockets\\.server\\.WebSocketServerProtocol is deprecated:DeprecationWarning",
    "ignore:Use `streamable_http_client` instead\\.:DeprecationWarning",
]

[project.scripts]
flowcept = "flowcept.cli:main"
